--- a/AutoClick/wwwroot/css/index-responsive.css
+++ b/AutoClick/wwwroot/css/index-responsive.css
@@ -229,6 +229,27 @@
         pointer-events: none;
     }
     
+    .index-banderin-carousel {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .index-banderin-carousel img {
+        width: 116.85%;
+        height: 116.85%;
+        position: absolute;
+        left: -7.78%;
+        top: -8.43%;
+        max-width: none;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+    }
+    
+    .index-banderin-carousel img.active {
+        opacity: 1;
+    }
+    
     .index-card-banderin img {
         width: 116.85%;
         height: 116.85%;
