--- a/AutoClick/Pages/ConfiguracionCuenta.cshtml
+++ b/AutoClick/Pages/ConfiguracionCuenta.cshtml
@@ -203,8 +203,8 @@
                 <span asp-validation-for="CurrentPasswordForEmail" class="validation-message"></span>
             </div>
             <div class="form-group">
-                <label for="NewEmail">Nuevo correo electrónico (@@gmail.com)</label>
-                <input asp-for="NewEmail" type="email" class="form-input" required autocomplete="off" placeholder="ejemplo@gmail.com" />
+                <label for="NewEmail">Nuevo correo electrónico</label>
+                <input asp-for="NewEmail" type="email" class="form-input" required autocomplete="off" placeholder="ejemplo@correo.com" />
                 <span asp-validation-for="NewEmail" class="validation-message"></span>
             </div>
             <div class="modal-actions">
